3.0908:
 - Mod: trash_messages_where now defaults to not returning deleted message IDs.
 - Mod: Firing BFG now requires captcha.
 - Fix: Jump Zone for BHG can now find needles in haystacks.

3.0907:
 - Add: Timer added to colony object preventing passage into Neutral Zone.
 - Add: colonies and stations added to empire stat. planets kept to maintain backwards compatibility
 - Fix: Fetching Spies no longer will send more spies.
 - Add: Sabotage Defenses task added for spies.
 - Add: Bugout task for spies added to get spies home.
 - Mod: Replace cheap plastic parts on Space Station with steel.
 - Mod: Slight tweaking of AI behaviours.

3.0906:
 - Fix: Some fixes to the send_ship_types API call.
 - Fix: Don't list platform plans for splitting in Dillon Forge.
 - Fix: Disable self-destruct works again.
 - Fix: Building/upgrade on SS has all buildings in parallel.
 - Mod: Damaged Gauntlet gives more granular infiltration time.
 - Mod: Spies take a break after teleporting home.
 - Mod: Improved unsustainable message to make it clearer.
 - Mod: Observatory now displays 30 rows not 25.
 - Mod: Option to send scows back home without any waste.
 - Mod: Update ChiselChat.
 - Mod: Plan list sorting now done more naturally.
 - Mod: Improve message handling speed (deleting, archiving).
 - Mod: Spy lists in intel min, merc guild, send-spy tab all use the same ordering.
 - Mod: Planets can't jump into the neutral zone when it has too many ships in transit.
 - Add: mass_abandon_excavator and mass_abandon_platform APIs.
 - Add: Inbox API call added: trash_messages_where.
 - Add: Add Highest Embassy in your empire to returned get_status.
 - Add: POD timer is now on PCC with varying timer based on PCC level.

3.0905:
 - Mod: Replaced Envolve chat with ChiselChat

3.0904:
 - Fix: Removed cronic duplication in starmap API, hopefully reducing lag
 - Mod: Gratch now more granualar for infiltration times when damaged