@@ -7,22 +7,7 @@ The list of methods below represents changes and additions to the methods that a
 
 =head2 view_laws (session_id, body_id )
 
-B<NOTE:> Pass in a the id of the station, not the id of the parliament building. This is because anyone that wants to should be able to view the laws in this jurisdiction.
-
-Returns a list of the laws.
-
- {
-    "status" : { ... },
-    "laws" : [
-        {
-            "id" : "id-goes-here",
-            "name" : "Censure of Jamie Vrbsky",
-            "description" : "Jamie Vrbsky is bad at playing Lacuna!",
-            "date_enacted" : "01 31 2010 13:09:05 +0600"
-        },
-        ...
-    ]
- }
+While still usable, replaced by a body call instead of via the station. See Body for details.
  
 =head3 session_id
 
@@ -31,8 +16,6 @@ A session id.
 =head3 body_id
 
 The unique id of the space station.
-
-
 
 
 
