@@ -510,9 +510,31 @@ sub get_buildable {
 
     return {buildable=>\%out, build_queue => { max => $max_items_in_build_queue, current => $items_in_build_queue}, status=>$self->format_status($empire, $body)};
 }
+sub view_laws {
+    my ($self, $session_id, $body_id) = @_;
+    my $empire = $self->get_empire_by_session($session_id);
+    my $body = Lacuna->db->resultset('Lacuna::DB::Result::Map::Body')
+                ->find($body_id);
+    if ($body->isa('Lacuna::DB::Result::Map::Body::Planet::Station')) {
+        my @out;
+        my $laws = $body->laws;
+        while (my $law = $laws->next) {
+            push @out, $law->get_status($empire);
+        }
+        return {
+            status          => $self->format_status($empire, $body),
+            laws            => \@out,
+        };
+    }
+    else {
+        return {
+            status => $self->format_status($empire, $body),
+            laws   => [ { name => "Not a Station", descripition => "Not a Station", date_enacted => "00 00 0000 00:00:00 +0000", id => 0 } ],
+        },
+    }
+}
 
-
-__PACKAGE__->register_rpc_method_names(qw(abandon rename get_buildings get_buildable get_status get_body_status repair_list rearrange_buildings));
+__PACKAGE__->register_rpc_method_names(qw(abandon rename get_buildings get_buildable get_status get_body_status repair_list rearrange_buildings view_laws));
 
 no Moose;
 __PACKAGE__->meta->make_immutable;
