@@ -2,6 +2,8 @@
  - Mod: trash_messages_where now defaults to not returning deleted message IDs.
  - Mod: Firing BFG now requires captcha.
  - Fix: Jump Zone for BHG can now find needles in haystacks.
+ - UI : Reasons for not being able to use a BHG function now always displayed for every task.
+ - Fix: Instead of going via parliament, go via body to view_laws.  This allows everyone access to passed laws by a station.
 
 3.0907:
  - Add: Timer added to colony object preventing passage into Neutral Zone.
